# ollama-prefect-paper-summarization

./: .env-template  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  startup.sh
summarization/: main.py
