[tool.poetry]
name = "summarization"
version = "0.1.0"
description = ""
authors = ["Marc Mezger <marc.mezger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.14.20"
llama-index = "^0.9.45.post1"
python-dotenv = "^1.0.1"
ollama = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
